crates/swc_fast_ts_strip/tests/errors/namespaces.ts
namespace Foo { }

export namespace Bar { }
